fix scrolling text overflow

--- a/styles.css
+++ b/styles.css
@@ -63,17 +63,15 @@ header {
 #economic-status-bar {
   background-color: green;
   color: #FFF;
-  padding: 1rem;
   position: relative;
   width: 100%;
   height: 3rem;
+  overflow: hidden;
 }
 
 #economic-status-message {
   animation: moveText 10s linear infinite;
   white-space: nowrap;
-  overflow: hidden;
-  right: 0;
 }
 
 /*  buttons */
